[package]
name = "gtk-sample"
version = "0.1.0"
authors = ["Quan Pham <doraemonfanclub@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# iced = { features = ["canvas", "tokio", "debug"] }
# chrono = "0.4"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
